--- a/package.json
+++ b/package.json
@@ -27,6 +27,14 @@
     "tailwindcss": "^4",
     "typescript": "^5"
   }
+  "scripts": {
+  "dev": "next dev --turbopack",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint",
+  "export": "next export"
+}
+
 }
 
 
