--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "dev": "next dev --turbopack",
   "build": "next build",
   "start": "next start",
-  "lint": "next lint",
-  "export": "next build"
-},
+  "lint": "next lint"
+}
+,
   "dependencies": {
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
