--- a/package.json
+++ b/package.json
@@ -10,24 +10,20 @@
 }
 ,
   "dependencies": {
-    "lucide-react": "^0.483.0",
-    "next": "15.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.3",
-    "tailwindcss": "^4",
-  "dev": "next dev -p 4000",
-  "build": "next build",
-  "start": "next start -p 4000"
+  "lucide-react": "^0.294.0",
+  "next": "14.0.4",
+  "react": "^18.3.1",
+  "react-dom": "^18.3.1",
+  "tailwindcss-animate": "^1.0.7"
+},
+"devDependencies": {
+  "@types/react": "^18.3.0",
+  "@types/react-dom": "^18.3.0",
+  "@types/node": "^20",
+  "eslint": "^8",
+  "eslint-config-next": "14.0.4",
+  "tailwindcss": "^3.3.0",
+  "typescript": "^5"
 },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
