--- a/package.json
+++ b/package.json
@@ -3,28 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "next dev --turbopack",
-  "build": "next build",
-  "start": "next start",
-  "lint": "next lint"
-}
-,
-  "dependencies": {
-  "lucide-react": "^0.294.0",
-  "next": "14.0.4",
-  "react": "^18.3.1",
-  "react-dom": "^18.3.1",
-  "tailwindcss-animate": "^1.0.7"
-},
-"devDependencies": {
-  "@types/react": "^18.3.0",
-  "@types/react-dom": "^18.3.0",
-  "@types/node": "^20",
-  "eslint": "^8",
-  "eslint-config-next": "14.0.4",
-  "tailwindcss": "^3.3.0",
-  "typescript": "^5"
-},
+    "dev": "next dev -p 4000",
+    "build": "next build",
+    "start": "next start -p 4000"
+  },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -40,15 +22,15 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
@@ -57,5 +39,6 @@
     "typescript": "^5"
   }
 }
+
 
 
