--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -39,5 +40,3 @@
     "typescript": "^5"
   }
 }
-
-
