--- a/netlify.toml
+++ b/netlify.toml
@@ -4,5 +4,6 @@ publish = ".next"
 
 [functions]
 directory = "netlify/functions"
-[[plugins]]
-package = "@netlify/plugin-nextjs"
+
+[build.environment]
+NEXT_PRIVATE_SRC_DIR = "src"
