--- a/netlify.toml
+++ b/netlify.toml
@@ -3,10 +3,8 @@ command = "npm run build"
 publish = ".next"
 
 [functions]
-directory = "netlify/functions"
-
-[build.environment]
-NEXT_PRIVATE_SRC_DIR = "src"
+node_bundler = "esbuild" # ← 明示的にJSビルドに設定！
 
 [[plugins]]
 package = "@netlify/plugin-nextjs"
+
