--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@ command = "npm run build"
 publish = ".next"
 
 [functions]
-node_bundler = "esbuild" # ← 明示的にJSビルドに設定！
+node_bundler = "esbuild"
 
 [[plugins]]
 package = "@netlify/plugin-nextjs"
