--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.2.6",
