--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-config-next": "14.0.4",
     "gulp": "^5.0.0",
     "postcss": "^8.5.3",
+    "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
